--- a/alarmcn/llvm-julia/lilac.yaml
+++ b/alarmcn/llvm-julia/lilac.yaml
@@ -1,6 +1,7 @@
 maintainers:
   - github: yuyichao
 post_build: git_pkgbuild_commit
+time_limit_hours: 3
 update_on:
   - source: manual
     manual: 12.0.0
