--- a/archlinuxcn/seafile/lilac.yaml
+++ b/archlinuxcn/seafile/lilac.yaml
@@ -3,13 +3,36 @@
 maintainers:
   - github: yuyichao
 
-build_prefix: archlinuxcn-x86_64
+pre_build_script: update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
 
-pre_build: aur_pre_build
-
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
 
 update_on:
-  - source: aur
-    aur: seafile
+  - source: github
+    github: haiwen/seafile
+    use_max_tag: true
+    include_regex: 'v(\d+.\d+.\d+)'
+  - source: alpm
+    from_pattern: ^(\d\.\d)\..*
+    to_pattern: \1
+    alpm: openssl
+    repo: core
+  - source: alpm
+    provided: libuuid.so
+    alpm: util-linux-libs
+  - source: alpm
+    from_pattern: ^(\d+\.\d+)\..*
+    to_pattern: \1
+    alpm: libevent
+  - source: alpm
+    alpm: curl
+    provided: libcurl.so
+  - source: alpm
+    alpm: glib2
+    provided: libgobject-2.0.so
+  - source: alpm
+    alpm: glib2
+    provided: libglib-2.0.so
   - alias: python
+  - source: manual
+    manual: 1
