--- a/archlinuxcn/seafile/lilac.yaml
+++ b/archlinuxcn/seafile/lilac.yaml
@@ -7,6 +7,9 @@ pre_build_script: update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
 
 post_build: git_pkgbuild_commit
 
+repo_depends:
+  - libsearpc
+
 update_on:
   - source: github
     github: haiwen/seafile
