--- a/archlinuxcn/graphite-web/PKGBUILD
+++ b/archlinuxcn/graphite-web/PKGBUILD
@@ -2,23 +2,25 @@
 # Contributor: Steven De Bondt <egnappah at gmail dot com>
 
 pkgname=graphite-web
-pkgver=1.1.8
-pkgrel=4
+pkgver=1.1.10
+pkgrel=1
 pkgdesc="a Django-based web application that renders graphs and dashboards"
 url="https://github.com/graphite-project/graphite-web"
 license=('Apache')
 depends=('python-pytz' 'python-six' 'python-cairocffi' 'python-pyparsing' 'python-django' 'python-django-tagging' 'gunicorn')
 makedepends=('python-setuptools')
-optdepends=('python-flask-cache: For caching'
-            'python-raven: For sentry support')
+optdepends=('python-flask-cache: for caching'
+            'python-raven: for sentry support'
+            'nginx: run the web interface')
 arch=('any')
 backup=('etc/graphite/local_settings.py')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/graphite-project/${pkgname}/archive/${pkgver}.tar.gz"
         "local_settings.py"
         "graphite-web.service" "graphite-web.socket")
-sha256sums=('6e35629493b9be77fa9902471053f6789e300c06fe74a0215253d986fc0b866c'
-            '98f0660a4346398c4d6a5074ee4ae0d45f0e6461436c9cb7a04fc6b1bfb4f23d'
-            'd89ee1b712783ccfacf55962a2e86b50f03585a8aae829771084777ac6a8f2f4'
+install=graphite-web.install
+sha256sums=('1ac42a2871ea58b76b42aa3671affb87c7a92616e949bf1312fca831075a501b'
+            'aaf70cb4d900e878693fb2c93a290b5e0d98c3ebfd3a113b55c178dd63b6e3b5'
+            '6e6e65f63eb6b1159835a286ada88075ee7b49c43b0bfb2c88013982268abc22'
             '318238773e37e1297d1eaf4c7b9e5dc9e8ae74298c381034b5476b14f0ab76bf')
 
 build() {
@@ -52,7 +54,7 @@ package() {
   cd "$srcdir/$pkgname-$pkgver"
   python setup.py install --root="${pkgdir}/" --optimize=1
 
-  mkdir -p "$pkgdir/var/log/graphite"
+  rm -r "$pkgdir/opt/graphite/storage"
   mkdir -p "$pkgdir/etc/graphite"
   install -Dm0644 "$srcdir/local_settings.py" "$pkgdir/etc/graphite/local_settings.py"
   ln -s "/etc/graphite/local_settings.py" "$pkgdir/opt/graphite/webapp/graphite/local_settings.py"
