--- a/archlinuxcn/graphite-web/graphite-web.service
+++ b/archlinuxcn/graphite-web/graphite-web.service
@@ -14,6 +14,7 @@ ProtectHome=true
 ProtectKernelTunables=true
 ProtectControlGroups=true
 LogsDirectory=graphite
+StateDirectory=graphite
 CapabilityBoundingSet=
 DynamicUser=true
 
