--- a/archlinuxcn/seafile-client/PKGBUILD
+++ b/archlinuxcn/seafile-client/PKGBUILD
@@ -11,35 +11,41 @@ arch=('i686' 'x86_64' 'armv7h' 'armv6h' 'aarch64')
 url="https://github.com/haiwen/$pkgname"
 license=('Apache')
 depends=(
-    "seafile>=$pkgver"
-    'qt6-base'
-    'qt6-webengine'
-    'qt6-5compat'
+  sqlite
+  jansson
+  libsearpc.so
+  libgobject-2.0.so
+  libglib-2.0.so
+  libseafile.so
+  zlib
+  'qt6-5compat'
+  'qt6-base'
+  'qt6-webengine'
 )
 optdepends=('gtk-update-icon-cache')
 makedepends=('cmake' 'qt6-tools')
 source=(
-    "$pkgname-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz"
-    'fix_build_with_QT6.diff'
+  "$pkgname-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz"
+  'fix_build_with_QT6.diff'
 )
 sha256sums=(
-    '167f70d95902d23774b811496cca00ca074fba2aeaae0cadc24b0090064e6d7c'
-    '5fc54daff54d3ea4e263aea6c23b8c812fe5287e487a56bbf05cf935dd149229'
+  '167f70d95902d23774b811496cca00ca074fba2aeaae0cadc24b0090064e6d7c'
+  '5fc54daff54d3ea4e263aea6c23b8c812fe5287e487a56bbf05cf935dd149229'
 )
 
 prepare() {
-    cd "$srcdir/$pkgname-$pkgver"
-    patch -p1 -i "$srcdir/fix_build_with_QT6.diff"
+  cd "$srcdir/$pkgname-$pkgver"
+  patch -p1 -i "$srcdir/fix_build_with_QT6.diff"
 }
 
 build() {
-    cmake -B build -S "$srcdir/$pkgname-$pkgver" \
+  cmake -B build -S "$srcdir/$pkgname-$pkgver" \
         -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_INSTALL_PREFIX='/usr' \
         -DBUILD_SHIBBOLETH_SUPPORT=ON
-    cmake --build build
+  cmake --build build
 }
 
 package() {
-    DESTDIR="$pkgdir" cmake --install build
+  DESTDIR="$pkgdir" cmake --install build
 }
