--- a/alarmcn/llvm-julia/PKGBUILD
+++ b/alarmcn/llvm-julia/PKGBUILD
@@ -8,7 +8,7 @@ arch=(i686 x86_64 armv7h aarch64)
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 makedepends=(cmake ninja libffi libedit ncurses libxml2 ocaml ocaml-ctypes ocaml-findlib
-             python-setuptools python-psutil python-sphinx python-recommonmark)
+             python-setuptools python-psutil python-sphinx python-recommonmark git)
 options=('staticlibs' '!strip')
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
 source=($_source_base/llvm-$pkgver.src.tar.xz
@@ -109,6 +109,8 @@ build() {
   CFLAGS+=' -ggdb1 -O3 -fasynchronous-unwind-tables'
   CXXFLAGS+=' -ggdb1 -O3 -fasynchronous-unwind-tables'
   LDFLAGS+=' -O3 -fasynchronous-unwind-tables'
+
+  env
 
   cmake .. -G Ninja \
         -DCMAKE_BUILD_TYPE=Release \
