--- a/archlinuxcn/bird-babel-rtt-git/lilac.yaml
+++ b/archlinuxcn/bird-babel-rtt-git/lilac.yaml
@@ -4,13 +4,11 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['JerryXiao'])
+pre_build: vcs_update
 
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
 
 update_on:
   - source: github
     github: tohojo/bird
     branch: babel-rtt-01
-  - source: aur
-    aur: bird-babel-rtt-git
