--- a/alarmcn/llvm-julia/PKGBUILD
+++ b/alarmcn/llvm-julia/PKGBUILD
@@ -9,7 +9,8 @@ url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 makedepends=(cmake ninja libffi libedit ncurses libxml2 ocaml ocaml-ctypes ocaml-findlib
              python-setuptools python-psutil python-sphinx python-recommonmark git)
-options=('staticlibs' '!strip')
+# Disable LTO for now since there seems to be some issue at least on aarch64
+options=('staticlibs' '!strip' '!lto')
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
 source=($_source_base/llvm-$pkgver.src.tar.xz
         0001-Revert-MC-Always-emit-relocations-for-same-section-f.patch
