--- a/alarmcn/libsixel/lilac.yaml
+++ b/alarmcn/libsixel/lilac.yaml
@@ -10,3 +10,5 @@ update_on:
     github: libsixel/libsixel
     use_max_tag: true
     include_regex: 'v(\d+.\d+.\d+)'
+  - source: manual
+    manual: 1
