[julia-git-blosc-git,julia-git-cubature-git] make arch any

--- a/archlinuxcn/julia-git-blosc-git/PKGBUILD
+++ b/archlinuxcn/julia-git-blosc-git/PKGBUILD
@@ -3,7 +3,7 @@ pkgver=0.7.3
 pkgrel=2
 pkgdesc="Blosc.jl"
 url="https://github.com/stevengj/Blosc.jl"
-arch=('i686' 'x86_64')
+arch=(any)
 license=('MIT')
 makedepends=(git julia-pkg-scripts)
 depends=(julia-git)
