--- a/archlinuxcn/julia-git-cubature-git/PKGBUILD
+++ b/archlinuxcn/julia-git-cubature-git/PKGBUILD
@@ -3,7 +3,7 @@ pkgver=1.5.1.0.3.g7a3d8e0
 pkgrel=7
 pkgdesc="Cubature.jl"
 url="https://github.com/stevengj/Cubature.jl"
-arch=('i686' 'x86_64')
+arch=(any)
 license=('MIT')
 makedepends=(git julia-pkg-scripts)
 depends=(julia-git)
