libasi, libindi-asi: resume automatic updates

--- a/archlinuxcn/libasi/lilac.yaml
+++ b/archlinuxcn/libasi/lilac.yaml
@@ -1,10 +1,9 @@
 maintainers:
   - github: oldherl
 update_on:
-#  - source: alpm
-#    strip_release: true
-#    alpm: libindi
-#    repo: community
+  - source: alpm
+    strip_release: true
+    alpm: libindi
+    repo: community
   - source: manual
-    manual: 2
-stagging: true
+    manual: 3
