--- a/archlinuxcn/libindi-asi/lilac.yaml
+++ b/archlinuxcn/libindi-asi/lilac.yaml
@@ -5,10 +5,9 @@ repo_depends:
   - libasi
 
 update_on:
-#  - source: alpm
-#    strip_release: true
-#    alpm: libindi
-#    repo: community
+  - source: alpm
+    strip_release: true
+    alpm: libindi
+    repo: community
   - source: manual
     manual: 3
-staging: true
