--- a/archlinuxcn/libasi/PKGBUILD
+++ b/archlinuxcn/libasi/PKGBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Sebastian Baberowski <sebastian@baberowski.com>
 
 pkgname=libasi
-pkgver=1.9.5
-pkgrel=2
+pkgver=1.9.6
+pkgrel=0
 pkgdesc="libasi used by INDI ASI drivers. Please note that for sake of simplicity package version is the version of libindi not a version of used ASI SDKs from ZWO. This package contains ASI Camera SDK, ASI EFW SDK, ASI EAF SDK and USBST4 SDK."
 url="http://www.indilib.org/index.php?title=Main_Page"
 license=(custom)
 arch=(x86_64)
-depends=("libindi>=1.9.5" "libindi<1.9.6")
+depends=(libindi=${pkgver})
 makedepends=(cmake)
 source=("https://github.com/indilib/indi-3rdparty/archive/v${pkgver}.tar.gz")
 sha256sums=('a4a7db8ff9998ffe0688eab6657e132b82a64b3f7a3b5cc7309b9c900edbd0df')
