[coeurl,mtxclient] missing arch support

--- a/alarmcn/coeurl-git/PKGBUILD
+++ b/alarmcn/coeurl-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=coeurl-git
 pkgver=0.0.0.70.87517c5
 pkgrel=1
 pkgdesc="Client API library for Matrix, built on top of Boost.Asio<Paste>"
-arch=('x86_64' 'i686')
+arch=(armv7h aarch64 x86_64 i686)
 url="https://nheko.im/nheko-reborn/coeurl"
 license=('MIT')
 depends=('libcurl.so' 'libfmt.so' 'libevent' 'libspdlog.so')
