--- a/archlinuxcn/mtxclient-git/PKGBUILD
+++ b/archlinuxcn/mtxclient-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=mtxclient-git
 pkgver=0.7.0.r14.g754800d
 pkgrel=1
 pkgdesc="Client API library for Matrix, built on top of Boost.Asio<Paste>"
-arch=('x86_64' 'i686')
+arch=(armv7h aarch64 x86_64 i686)
 url="https://github.com/Nheko-Reborn/mtxclient"
 license=('MIT')
 depends=('boost-libs' 'libcoeurl.so' 'libolm' 'libevent'
