--- a/archlinuxcn/python-django-tagging/PKGBUILD
+++ b/archlinuxcn/python-django-tagging/PKGBUILD
@@ -1,32 +1,28 @@
-_name=django-tagging
+# Maintainer: lilydjwg <lilydjwg@gmail.com>
+# Contributor: Steven De Bondt <egnappah at gmail dot com>
+
 pkgname=python-django-tagging
+_pkgname=django-tagging
 pkgver=0.5.0
-pkgrel=3
-pkgdesc="Generic tagging application for Django"
-arch=(any)
-url="https://github.com/Fantomas42/django-tagging"
-license=('BSD License')
-depends=('python')
+pkgrel=2
+pkgdesc="A generic tagging application for Django projects in python3"
+arch=('any')
+url='https://pypi.org/pypi/django-tagging'
+license=('MIT')
+depends=('python-django')
 makedepends=('python-setuptools')
-source=("https://files.pythonhosted.org/packages/source/${_name::1}/${_name}/django-tagging-0.5.0.tar.gz")
+source=("https://files.pythonhosted.org/packages/d2/9b/a137d764eb990ac353399d244aa96c7cf02aabe3c58be5a74418406bb838/${_pkgname}-${pkgver}.tar.gz")
 sha256sums=('28d68fa4831705e51ad7d1e845ed6dd9e354f9b6f8a5f63b655a430646ef4e8d')
 
 build() {
-  cd "$srcdir/django-tagging-0.5.0"
-  python3 setup.py build
+  cd "${srcdir}/${_pkgname}-${pkgver}"
+  python setup.py build
+  #Change for new django version
+  sed -i 's/smart_text/smart_str/g' build/lib/tagging/models.py
 }
 
 package() {
-  cd "$srcdir/django-tagging-0.5.0"
-  python3 setup.py install --root=$pkgdir --optimize=1 --skip-build
-
-  # make sure we don't install any world-writable or root-readable-only files
-  # we shouldn't need to fix ownership as we extract tarballs as a non-root user
-  # https://github.com/pypa/setuptools/issues/1328
-  # https://github.com/LonamiWebs/Telethon/issues/1605
-  chmod u=rwX,go=rX -R "$pkgdir"
-  # make sure we don't install annoying files
-  local _site_packages=$(python -c "import site; print(site.getsitepackages()[0])")
-  rm -rf "$pkgdir/$_site_packages/tests/"
+  cd "${srcdir}/${_pkgname}-${pkgver}"
+  python setup.py install --root=${pkgdir} --optimize=1
+  install -D -m644 LICENSE.txt ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
 }
-
