archlinuxcn-mirrorlist-git: update debuginfod config

--- a/archlinuxcn/archlinuxcn-mirrorlist-git/PKGBUILD
+++ b/archlinuxcn/archlinuxcn-mirrorlist-git/PKGBUILD
@@ -23,7 +23,7 @@ package() {
   mkdir -p "$pkgdir/etc/pacman.d/"
   cp "$_mirrorlist_name" "$pkgdir/etc/pacman.d/"
   mkdir -p "$pkgdir/etc/debuginfod/"
-  cp "archlinuxcn.urls" "$pkgdir/etc/debuginfod/"
+  cp "b-archlinuxcn.urls" "$pkgdir/etc/debuginfod/"
 }
 
 # vim:set ts=2 sw=2 et:
