swaync: fix lilac.yaml

--- a/archlinuxcn/swaync/lilac.yaml
+++ b/archlinuxcn/swaync/lilac.yaml
@@ -12,3 +12,5 @@ update_on:
     aur: swaync
   - source: github
     github: ErikReider/SwayNotificationCenter
+    use_latest_release: true
+    prefix: v
