php-swoole: update version 5.x

--- a/archlinuxcn/php-swoole/PKGBUILD
+++ b/archlinuxcn/php-swoole/PKGBUILD
@@ -1,22 +1,21 @@
-# Maintainer: Bruce Zhang
-# Co-Maintainer: William Tang <galaxyking0419@gmail.com>
+# Maintainer: William Tang <galaxyking0419@gmail.com>
+# Contributor: Bruce Zhang
 # Contributor: lilac <lilac@build.archlinuxcn.org>
 # Contributor: 吕海涛 <aur@lvht.net>
 
 _extname=swoole
 pkgname=php-$_extname
-pkgver=5.0.0
+pkgver=5.0.1
 pkgrel=1
 pkgdesc="Coroutine-based concurrency library for PHP"
 arch=('x86_64')
 url="https://github.com/swoole/swoole-src"
 license=('Apache')
 depends=('php')
-makedepends=('gcc' 'make')
+makedepends=('autoconf' 'gcc' 'make')
 
-source=("https://github.com/swoole/swoole-src/archive/refs/tags/v$pkgver.tar.gz"
-        "$_extname.ini")
-sha256sums=('460ae95865af17bdd986720c775b3752cedfc27c2b0efe96cc28ff24d5b1ffdc'
+source=("https://github.com/swoole/swoole-src/archive/refs/tags/v$pkgver.tar.gz" "$_extname.ini")
+sha256sums=('8db635960f25b8b986f5214b44941f499d61d037867e11e27da108c19dc855c3'
             '58d1d032fe130fee8666238d14013e51c75683d7b806c61d1ada3bb8470adb44')
 
 build() {
