--- a/archlinuxcn/kicad-library-git/lilac.yaml
+++ b/archlinuxcn/kicad-library-git/lilac.yaml
@@ -1,6 +1,7 @@
 maintainers:
   - github: edward-p
   - github: MarvelousBlack
+  - github: taotieren
 
 build_prefix: extra-x86_64
 
@@ -13,3 +14,5 @@ update_on:
     gitlab: kicad/libraries/kicad-symbols
   - source: gitlab
     gitlab: kicad/libraries/kicad-footprints
+  - source: gitlab
+    gitlab: kicad/libraries/kicad-templates
