mpv-git: migrate to version.py
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/mpv-git/PKGBUILD
+++ b/archlinuxcn/mpv-git/PKGBUILD
@@ -52,7 +52,7 @@ options=('debug' 'strip')
 
 pkgver() {
     cd "$srcdir/mpv"
-    ./version.sh | sed s/-/_/g
+    ./version.py | sed s/-/_/g
 }
 
 prepare() {
