topgrade: update src repo #3125
Signed-off-by: Wenxuan Zhang <wenxuangm@gmail.com>

--- a/archlinuxcn/topgrade/PKGBUILD
+++ b/archlinuxcn/topgrade/PKGBUILD
@@ -1,15 +1,16 @@
-# Maintainer: Roey Darwish Dror <roey.ghost@gmail.com>
+# Maintainer: Thomas Schoenauer <t.schoenauer@hgs-wt.at>
+# Contributor: Roey Darwish Dror <roey.ghost@gmail.com>
 
 pkgname=topgrade
-pkgver=9.0.1
+pkgver=10.3.0
 pkgrel=1
 pkgdesc='Invoke the upgrade procedure of multiple package managers'
 arch=('x86_64' 'aarch64' 'armv7')
-url='https://github.com/r-darwish/topgrade'
+url='https://github.com/topgrade-rs/topgrade'
 license=('GPL3')
 makedepends=('rust')
 source=("$pkgname-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz")
-sha256sums=('70a1cf2c6a4de41e4c708409842968f3cf05dd5f238efac7ca0f1c9064be670a')
+sha256sums=('6ed1fa0ca3c2031e183ad8852de41be77e216076508e896fc38b7ad1cce15d0d')
 
 build() {
   cd "$pkgname-$pkgver"
@@ -21,6 +22,5 @@ package() {
   cd "$pkgname-$pkgver"
 
   install -Dm755 target/release/$pkgname "$pkgdir/usr/bin/$pkgname"
-  install -Dm644 $pkgname.8 "$pkgdir/usr/share/man/man8/$pkgname.8"
   install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
