--- a/archlinuxcn/topgrade/lilac.yaml
+++ b/archlinuxcn/topgrade/lilac.yaml
@@ -3,7 +3,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['darwish', 'idanski'])
+pre_build_script: aur_pre_build(maintainers=['darwish', 'dotto'])
 
 post_build: aur_post_build
 
