python-pandas-profiling: upgrade and rename to python-ydata-profiling

--- a/archlinuxcn/python-ydata-profiling/PKGBUILD
+++ b/archlinuxcn/python-ydata-profiling/PKGBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Butui Hu <hot123tea123@gmail.com>
 
-pkgname=python-pandas-profiling
-_pkgname=pandas-profiling
-pkgver=3.6.3
+pkgname=python-ydata-profiling
+_pkgname=ydata-profiling
+pkgver=4.0.0
 pkgrel=1
 pkgdesc='Create HTML profiling reports from pandas DataFrame objects'
 arch=('any')
-url='https://github.com/ydataai/pandas-profiling'
+url='https://github.com/ydataai/ydata-profiling'
 license=('MIT')
 depends=(
   python-htmlmin
@@ -30,11 +30,12 @@ depends=(
   python-visions
   python-yaml
 )
-
+conflicts=(python-pandas-profiling)
+replaces=(python-pandas-profiling)
 makedepends=(python-setuptools)
 
-source=("${_pkgname}-${pkgver}.tar.gz::https://github.com/pandas-profiling/pandas-profiling/archive/v${pkgver}.tar.gz")
-sha512sums=('f81891786bfc655b6bc42aa1d67703a6f3b528373b82feaa85d810beb841b73d523f403a27a03c5f6ea8b8ba4b91b9e30b0eaa949af6fe2504fbbe82579f5878')
+source=("${_pkgname}-${pkgver}.tar.gz::https://github.com/ydataai/ydata-profiling/archive/refs/tags/v${pkgver}.tar.gz")
+sha512sums=('d1f1fa6fabc799c82877e9ad4ea9dee291460f4e060fba971ed7ab0cd9e8af957170873960b1f270c3111d5fc048f1b521cb76471b47a9e2e18c8ca2c0a25725')
 
 build() {
   cd "${srcdir}/${_pkgname}-${pkgver}"
