--- a/archlinuxcn/python-ydata-profiling/lilac.yaml
+++ b/archlinuxcn/python-ydata-profiling/lilac.yaml
@@ -10,7 +10,7 @@ repo_depends:
   - python-visions
 update_on:
   - source: github
-    github: ydataai/pandas-profiling
+    github: ydataai/ydata-profiling
     use_latest_release: true
   - source: manual
     manual: 1
