openturns: switch to use_max_tag

--- a/archlinuxcn/openturns/lilac.yaml
+++ b/archlinuxcn/openturns/lilac.yaml
@@ -6,7 +6,7 @@ repo_depends:
 update_on:
   - source: github
     github: openturns/openturns
-    use_latest_release: true
+    use_max_tag: true
   - source: manual
     manual: 1
   - alias: python
