libchewing-git: upstream ABI is compatible again
Inadvertent ABI changes are fixed [1], so PKGBUILD changes in [2] are
reverted.

Other minor changes:
* https://chewing.im is now available
* debug is now enabled by default
* Bring back the info page, which is disabled by default along with the
  Rust rewrite [3]
* archlinuxcn-specific:
    * Merge lilac.py into lilac.yaml
    * Manage the AUR repo by myself instead of delegating it to lilac
    * Move away from vcs nvchecker source

[1] https://github.com/chewing/libchewing/pull/372
[2] https://github.com/archlinuxcn/repo/commit/27463c4e7562a50e757b6f2fe8d8223be44e9c96
[3] https://github.com/chewing/libchewing/commit/9739747f7e2d1bee8fd2225095ec375bc83073b9

--- a/archlinuxcn/libchewing-git/PKGBUILD
+++ b/archlinuxcn/libchewing-git/PKGBUILD
@@ -7,15 +7,15 @@ pkgver=0.5.1.r159.gfad98d6
 pkgrel=1
 epoch=1
 pkgdesc='Intelligent Chinese phonetic input method'
-url='http://chewing.im/'
+url='https://chewing.im/'
 arch=('i686' 'x86_64')
 license=('LGPL2.1')
 conflicts=("$_pkgname")
+provides=("$_pkgname")
 depends=('sqlite')
 makedepends=('cmake' 'git')
 source=("git+https://github.com/chewing/libchewing/")
 md5sums=('SKIP')
-options=('debug')
 
 pkgver() {
   cd "$_pkgname"
@@ -34,6 +34,7 @@ build() {
   cmake \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_INSTALL_LIBDIR=/usr/lib \
+    -DBUILD_INFO=ON \
     ..
   make
 }
