--- a/archlinuxcn/libllvmextra_jll-git/PKGBUILD
+++ b/archlinuxcn/libllvmextra_jll-git/PKGBUILD
@@ -1,7 +1,7 @@
 #
 
 pkgname=libllvmextra_jll-git
-pkgver=v4.14.1.r2.gc916d80
+pkgver=v4.14.1.r4.g9f9d2fa
 pkgrel=1
 pkgdesc='Deps for LLVM.jl'
 arch=(aarch64 armv7h i686 x86_64)
@@ -9,8 +9,10 @@ url='https://github.com/maleadt/LLVM'
 license=('MIT')
 depends=(llvm-julia)
 makedepends=(git cmake)
-source=('git+https://github.com/maleadt/LLVM.jl')
-sha1sums=('SKIP')
+source=('git+https://github.com/maleadt/LLVM.jl'
+        0001-Temporary-fix-for-LLVM-15.patch)
+sha1sums=('SKIP'
+          '9a7b6bce927a947c9597962193d71608125fb06e')
 provides=('libllvmextra_jll')
 conflicts=('libllvmextra_jll')
 options=('debug')
@@ -19,6 +21,12 @@ pkgver() {
   cd LLVM.jl
 
   git describe --long --tags | sed -r 's/([^-]*-g)/r\1/;s/-/./g'
+}
+
+prepare() {
+  cd LLVM.jl
+
+  patch -Np1 < ../0001-Temporary-fix-for-LLVM-15.patch
 }
 
 build() {
