--- a/archlinuxcn/julia-git/PKGBUILD
+++ b/archlinuxcn/julia-git/PKGBUILD
@@ -62,7 +62,8 @@ source=('git+https://github.com/JuliaLang/julia'
         julia-precompile.hook
         julia-clear-precompile.hook
         arch-source-translate.cpp
-        sysp7z.diff)
+        sysp7z.diff
+        0001-Support-suitesparse-version-7.0.patch)
 sha512sums=('SKIP'
             '8d57ee818e98980152fde0c7aa3160257131a46d0dfd2df2c15cd17ad9731b64fe2a24ad5f61edbe7dde70592d290a5e43064b56aa470a0526c7ca8f671f4349'
             'c32ad3d454421153031ba6961d231214abd5dafb79277af540977d0d1a9c107836904be1b5badd2e0cfeff8ce2492c8fb9f54f26b05964805191e2470a398040'
@@ -70,13 +71,14 @@ sha512sums=('SKIP'
             'f7b9dc9f1b52a34407ac2d9a03d12f8326bd715bc2f1a55b50c3dedc852cb1484ff008a41a5892377c8e91faf1eeb007d858ebe7a5caa76b16aeb5ae84bc374a'
             'f4192c755767055c45ece87d4bf1f8b488cb70b4890c90ca65754fec9b488811da630b10c0126c4fdb0da0b6d6f9097094bc7073e37bb194550a60dc0f904929'
             'ab2c9f06c41cfaf7c0d18ed9e6f5c75cbd53aad868dc080b0163c88edf2ac0cc591f20f268f130e45f5a35190cc56dea29507c35a42dbca164dc45222c0cc4a1'
-            '93bd79be58002e463782f0962aa296a3bef2d55e77dea8e58b04c7fb9dc3dbb33c4fa36413a691d6170f8e0b35adee556d52aa49c3ca8fad3a525d5936afaafe'
+            '4be0f9d0b7c148f58c2f3bebd9d1ed5eb30fa8a829db1258bb3dc43af3fb870e657042ecd702565617b7c48f35b9d82aa09f35ccc2de527747c8654f07d5e516'
             '2bf050afb5afcd21b23667beb6129e73dc2fb8143366921c8859d7011ed06187db9f4aedae99c0fe31e0bcb7b0896180b006ee542d4b4d592369e9f4f1bd77ec'
             'ce03e2995a45d942f480d25d1ce7cddacb98f2e11eeed19b5564e36d817987f548c313b0d6b139402ba8c203c8ba9a059e1732695517d7b78b7fa88f08429295'
             '36df234b634926bc88084e683ee9f495ef0ce4c26d6d6b9f55294098bdcb86f5eaaf6c671afe1a5c4371c428bd7bf3dd617ec1f15a7ff35376d67df22140454c'
             'adf0fef964e8bdee9926f1127177bc0ddea0d2dbb1090ab94555c3599b87cf03b489dfe92fda3453bf68385f4b69556f396b1ecfb8a9525c23a3ed808e2eb370'
             'c2da7461c53e56293d35581cb4aa2500ef9a98e52a354bfa9271f44bd768ed77c5b362e304e0ab467fb286d2198f3e28cf91089e8773ebcfc85e294223a12f0e'
-            '79012833348654947f6b045e2ab5aa0a155aadbc1fd9e034c04456ce13acccdbbd2d3e6389daa2e4644c979b1f7ccea41afb0d54c1719b1b681f68fcb6006849')
+            '79012833348654947f6b045e2ab5aa0a155aadbc1fd9e034c04456ce13acccdbbd2d3e6389daa2e4644c979b1f7ccea41afb0d54c1719b1b681f68fcb6006849'
+            'c9ed20039eaa314279c56ac9e36e6d5f34aeb674fd3ceb7c1ce6b8a1cc939883609ea41fcfd71f542213bcfbf4fa89eafefe126d3d30051c18edacb4788301db')
 
 pkgver() {
   cd julia
@@ -164,13 +166,19 @@ _patch_suitesparse() {
       echo "WARNING: Multiple versions of cholmod libraries found" >&2
     fi
   done
-  # Patch the code to assume newer cholmod version. This is generally unsafe
-  # but should be fine for 3->4 according to the suitesparse changelog.
-  for f in usr/share/julia/stdlib/v*/SparseArrays/src/solvers/lib/*.jl; do
-    echo "Updating $f"
-    sed -i -e "s/\(CHOLMOD_MAIN_VERSION *= *\)[0-9]*/\1${cholmod_maj_ver}/" "$f"
-    sed -i -e "s/\(CHOLMOD_SUB_VERSION *= *\)[0-9]*/\1${cholmod_min_ver}/" "$f"
-    sed -i -e "s/\(CHOLMOD_SUBSUB_VERSION *= *\)[0-9]*/\1${cholmod_patch_ver}/" "$f"
+  for d in usr/share/julia/stdlib/v*/SparseArrays; do
+    (
+      cd "$d"
+      patch -Np1 < "$srcdir/0001-Support-suitesparse-version-7.0.patch"
+      # Patch the code to assume newer cholmod version. This is generally unsafe
+      # but should be fine for 3->4 according to the suitesparse changelog.
+      for f in src/solvers/lib/*.jl; do
+        echo "Updating $d/$f"
+        sed -i -e "s/\(CHOLMOD_MAIN_VERSION *= *\)[0-9]*/\1${cholmod_maj_ver}/" "$f"
+        sed -i -e "s/\(CHOLMOD_SUB_VERSION *= *\)[0-9]*/\1${cholmod_min_ver}/" "$f"
+        sed -i -e "s/\(CHOLMOD_SUBSUB_VERSION *= *\)[0-9]*/\1${cholmod_patch_ver}/" "$f"
+      done
+    )
   done
 }
 
