[julia-git] More suitesparse fix

--- a/alarmcn/julia-git/PKGBUILD
+++ b/alarmcn/julia-git/PKGBUILD
@@ -32,7 +32,7 @@ case "$CARCH" in
 esac
 
 epoch=1
-pkgver=1.10.0.DEV.485.gbebff475197
+pkgver=1.10.0.DEV.490.gd02516e4357
 pkgrel=1
 pkgdesc="Julia is a high-level, high-performance, dynamic programming language."
 arch=('i686' 'x86_64' 'armv7h' 'aarch64')
@@ -78,7 +78,7 @@ sha512sums=('SKIP'
             'adf0fef964e8bdee9926f1127177bc0ddea0d2dbb1090ab94555c3599b87cf03b489dfe92fda3453bf68385f4b69556f396b1ecfb8a9525c23a3ed808e2eb370'
             'c2da7461c53e56293d35581cb4aa2500ef9a98e52a354bfa9271f44bd768ed77c5b362e304e0ab467fb286d2198f3e28cf91089e8773ebcfc85e294223a12f0e'
             '79012833348654947f6b045e2ab5aa0a155aadbc1fd9e034c04456ce13acccdbbd2d3e6389daa2e4644c979b1f7ccea41afb0d54c1719b1b681f68fcb6006849'
-            'c9ed20039eaa314279c56ac9e36e6d5f34aeb674fd3ceb7c1ce6b8a1cc939883609ea41fcfd71f542213bcfbf4fa89eafefe126d3d30051c18edacb4788301db')
+            'de100e2627aaf3fb5bc7ded225dc3cbc3f384a7485f74599470f8aa3645a71f31cb256738aee2a94c725bb2ace03b967f43b4e920e71925e629e5c01aa35cc2e')
 
 pkgver() {
   cd julia
