--- a/archlinuxcn/aw-watcher-window-wayland-git/lilac.yaml
+++ b/archlinuxcn/aw-watcher-window-wayland-git/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: Y7n05h
-build_prefix: archlinuxcn-x86_64
+build_prefix: extra-x86_64
+repo_depends:
+  - aw-client
 update_on:
   - source: github
     github: ActivityWatch/aw-watcher-window-wayland
