--- a/archlinuxcn/bilili/lilac.yaml
+++ b/archlinuxcn/bilili/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: Y7n05h
-build_prefix: archlinuxcn-x86_64
+build_prefix: extra-x86_64
+repo_depends:
+  - python-biliass
 update_on:
   - source: github
     github: SigureMo/bilili
