--- a/archlinuxcn/rust-fleet-git/lilac.yaml
+++ b/archlinuxcn/rust-fleet-git/lilac.yaml
@@ -1,7 +1,10 @@
 maintainers:
   - github: Y7n05h
 
-build_prefix: archlinuxcn-x86_64
+build_prefix: extra-x86_64
+repo_depends:
+ - rust-nightly
+ - cargo-nightly
 
 update_on:
   - source: github
