rust-fleet-git eww activitywatch aw-watcher-window-wayland-git: fix lilac.yaml

--- a/archlinuxcn/aw-watcher-window-wayland-git/lilac.yaml
+++ b/archlinuxcn/aw-watcher-window-wayland-git/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: Y7n05h
 build_prefix: extra-x86_64
 repo_depends:
-  - aw-client
+  - activitywatch: aw-client
 update_on:
   - source: github
     github: ActivityWatch/aw-watcher-window-wayland
