--- a/archlinuxcn/activitywatch/lilac.yaml
+++ b/archlinuxcn/activitywatch/lilac.yaml
@@ -2,8 +2,8 @@ maintainers:
   - github: Y7n05h
 build_prefix: extra-x86_64
 repo_depends:
- - rust-nightly
- - cargo-nightly
+ - rust-nightly: rust-nightly
+ - rust-nightly: cargo-nightly
 
 update_on:
   - source: github
