--- a/archlinuxcn/rust-fleet-git/lilac.yaml
+++ b/archlinuxcn/rust-fleet-git/lilac.yaml
@@ -3,8 +3,8 @@ maintainers:
 
 build_prefix: extra-x86_64
 repo_depends:
- - rust-nightly
- - cargo-nightly
+ - rust-nightly: rust-nightly
+ - rust-nightly: cargo-nightly
 
 update_on:
   - source: github
