prismlauncher-git: fix depends

--- a/archlinuxcn/prismlauncher-git/PKGBUILD
+++ b/archlinuxcn/prismlauncher-git/PKGBUILD
@@ -8,16 +8,16 @@
 _pkgname=prismlauncher
 pkgname=${_pkgname}-git
 pkgver=6.0.r245.gc392db7e0
-pkgrel=1
+pkgrel=2
 pkgdesc="Minecraft launcher with ability to manage multiple instances."
 arch=('i686' 'x86_64' 'aarch64')
 url="https://prismlauncher.org"
 license=('GPL3')
-depends=('java-runtime' 'libgl' 'qt6-base' 'qt6-5compat' 'qt6-svg' 'qt6-imageformats' 'zlib' 'hicolor-icon-theme' 'quazip-qt6')
+depends=('java-runtime' 'libgl' 'qt6-base' 'qt6-5compat' 'qt6-svg' 'qt6-imageformats' 'zlib' 'hicolor-icon-theme' 'quazip-qt6' 'cmark' 'tomlplusplus')
 provides=('prismlauncher')
 replaces=('polymc' 'polymc-git')
 conflicts=('polymc' 'polymc-qt5' 'prismlauncher' 'prismlauncher-qt5')
-makedepends=('cmake' 'extra-cmake-modules' 'git' 'java-environment' 'scdoc' 'tomlplusplus' 'ghc-filesystem' 'gamemode')
+makedepends=('cmake' 'extra-cmake-modules' 'git' 'java-environment' 'scdoc' 'ghc-filesystem' 'gamemode')
 optdepends=('glfw: to use system GLFW libraries'
             'openal: to use system OpenAL libraries'
             'visualvm: Profiling support'
@@ -38,10 +38,13 @@ pkgver() {
 prepare() {
   cd "PrismLauncher"
   git submodule init
+  git config submodule.libraries/cmark.active false
+  git config submodule.libraries/extra-cmake-modules.active false
+  git config submodule.libraries/filesystem.active false
   git config submodule.libraries/libnbtplusplus.url "${srcdir}/libnbtplusplus"
   git config submodule.libraries/quazip.active false
   git config submodule.libraries/tomlplusplus.active false
-  git config submodule.libraries/filesystem.active false
+  git config submodule.libraries/zlib.active false
   git submodule--helper update
 }
 
