--- a/archlinuxcn/clash-premium-bin/lilac.yaml
+++ b/archlinuxcn/clash-premium-bin/lilac.yaml
@@ -7,4 +7,5 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: clash-premium-bin
-staging: true
+  - source: manual
+    manual: 1
