--- a/archlinuxcn/sway-hidpi-git/PKGBUILD
+++ b/archlinuxcn/sway-hidpi-git/PKGBUILD
@@ -49,6 +49,7 @@ sha512sums=('SKIP'
             '00baf52f67945175f6386847408f94d0db1f8c68afd5fb0ca359fc6aeeae85912d5fc44bc33857d0d13971a4bfa26ea71c8078c3672bc7d516bdbc04de480d97')
 provides=("sway" "sway-git")
 conflicts=("sway" "sway-git")
+install="sway.install"
 options=(debug)
 
 prepare() {
