--- a/archlinuxcn/notepad---git/PKGBUILD
+++ b/archlinuxcn/notepad---git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=notepad---git
-pkgver=1.22.r37.g664c818
+pkgver=1.22.r57.g5953225
 pkgrel=1
 pkgdesc="Notepad-- 是一个简单的国产跨平台文本编辑器，是替换 Notepad++ 的一种选择。其内置强大的代码对比功能，让你丢掉付费的 Beyond Compare。"
 arch=('x86_64')
@@ -9,10 +9,14 @@ url="https://gitee.com/cxasm/notepad--"
 license=('GPL3')
 provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
-depends=(qt5-base
-        qt5-xmlpatterns)
-makedepends=(git
-            qt5-tools)
+_qt=qt5
+depends=($_qt-base
+        $_qt-xmlpatterns
+        qscintilla-$_qt)
+makedepends=(cmake
+            ninja
+            git
+            $_qt-tools)
 source=("${pkgname}::git+${url}.git")
 sha256sums=('SKIP')
 
@@ -22,16 +26,17 @@ pkgver() {
 }
 
 build() {
-    cd "${srcdir}/${pkgname}/src/qscint/src/"
-    qmake-qt5 -makefile -o Makefile "CONFIG+=release"
-    make
+    cd "${srcdir}/${pkgname}/"
+    cmake -S . \
+        -D CMAKE_BUILD_TYPE=None \
+        -D CMAKE_INSTALL_PREFIX=/usr \
+        -B build \
+        -G Ninja \
+        -W no-dev
 
-    cd "${srcdir}/${pkgname}/src/"
-    qmake-qt5 -makefile -o Makefile "CONFIG+=release"
-    make
+    ninja -C build
 }
 
 package() {
-    cp -ra "${srcdir}"/${pkgname}/src/linux/*  "$pkgdir"/
-    install -Dm0755 "${srcdir}/${pkgname}/src/x64/Release/Notepad--" "${pkgdir}/usr/bin/${pkgname%-git}"
+    DESTDIR="${pkgdir}" ninja -C "${srcdir}"/${pkgname}/build install
 }
