[dynarmic] Disable test completely

--- a/archlinuxcn/dynarmic/PKGBUILD
+++ b/archlinuxcn/dynarmic/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Alexandre Bouvier <contact@amb.tf>
 pkgname=dynarmic
 pkgver=6.4.5
-pkgrel=1
+pkgrel=2
 pkgdesc="An ARM dynamic recompiler"
 arch=('aarch64' 'x86_64')
 url="https://github.com/merryhime/dynarmic"
@@ -27,7 +27,7 @@ build() {
 		-DCMAKE_CXX_FLAGS_RELEASE="-DNDEBUG" \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DDYNARMIC_IGNORE_ASSERTS=ON \
-		-DDYNARMIC_TESTS="$CHECKFUNC" \
+		-DDYNARMIC_TESTS=OFF \
 		-DDYNARMIC_USE_LLVM=ON \
 		-DDYNARMIC_USE_PRECOMPILED_HEADERS=OFF \
 		-Wno-dev
