--- a/archlinuxcn/dynarmic/PKGBUILD
+++ b/archlinuxcn/dynarmic/PKGBUILD
@@ -6,15 +6,14 @@ pkgdesc="An ARM dynamic recompiler"
 arch=('aarch64' 'x86_64')
 url="https://github.com/merryhime/dynarmic"
 license=('BSD')
-depends=('llvm-libs')
+depends=('llvm-libs' 'fmt' 'zydis')
 makedepends=(
 	'boost>=1.57'
 	'cmake>=3.12'
-	'fmt>=9'
 	'llvm'
 	'robin-map>=0.6.2'
 	'xbyak>=6.68'
-	'zydis>=4'
+    'clang'
 )
 provides=('libdynarmic.so')
 source=("$pkgname-$pkgver.tar.gz::$url/archive/refs/tags/$pkgver.tar.gz")
@@ -22,6 +21,10 @@ b2sums=('07e48b284816dfe7a94b15499945068bb25410e4c735f0119768db91ff7de54c719ddcb
 
 build() {
 	cmake -S $pkgname-$pkgver -B build \
+        -DCMAKE_CXX_COMPILER=clang++ \
+        -DCMAKE_C_COMPILER=clang \
+        -DCMAKE_C_FLAGS="$CFLAGS -flto=thin" \
+        -DCMAKE_CXX_FLAGS="$CXXFLAGS -flto=thin" \
 		-DBUILD_SHARED_LIBS=ON \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_CXX_FLAGS_RELEASE="-DNDEBUG" \
@@ -35,7 +38,6 @@ build() {
 }
 
 package() {
-	depends+=('libfmt.so' 'libZydis.so')
 	# shellcheck disable=SC2154
 	DESTDIR="$pkgdir" cmake --install build
 	install -Dm644 -t "$pkgdir"/usr/share/licenses/$pkgname $pkgname-$pkgver/LICENSE.txt
