--- a/archlinuxcn/python-scikit-image/lilac.yaml
+++ b/archlinuxcn/python-scikit-image/lilac.yaml
@@ -11,6 +11,7 @@ repo_depends:
   - python-imagecodecs
   - python-imageio
   - python-imread
+  - python-lazy-loader
   - python-pywavelets
   - python-tifffile
 update_on:
