linux-lily: update to 6.1.x
also uksm is dead.

--- a/archlinuxcn/linux-lily/PKGBUILD
+++ b/archlinuxcn/linux-lily/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgbase=linux-lily
-pkgver=6.0.9
+pkgver=6.1.10
 pkgrel=1
 pkgdesc='Linux-lily'
 url="https://www.kernel.org/"
 arch=(x86_64)
 license=(GPL2)
 makedepends=(
-  bc libelf pahole cpio perl tar xz
+  bc libelf pahole cpio perl tar xz gettext
   # xmlto python-sphinx python-sphinx_rtd_theme graphviz imagemagick texlive-latexextra
   parallel git
 )
